Make main match master
